--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "antd": "^4.18.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "date-picker": "^0.5.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.4",
     "react": "^17.0.2",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
